--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>CSE 599: Social and Collaborative Computing</title>
+    <title>CSE 481p: Social Computing Capstone</title>
 
     <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&amp;family=Roboto+Mono:ital,wght@0,500;1,300&amp;display=swap" rel="stylesheet">
@@ -61,25 +61,31 @@
 
 
 <BR>
-     <h1>CSE 599: Social and Collaborative Computing</h1>
+     <h1>CSE 481p: Social Computing Capstone</h1>
 
 
 	<BR><BR>
 <div class="nav-box">
-    <span style="font-weight: bold;">Class Time</span>: MW, 1:30PM - 2:50PM PT<BR>
-	<span style="font-weight: bold;">Location</span>: Zoom and Canvas<BR>
-	<span style="font-weight: bold;">Office hours</span>: by appointment<BR>
+    <span style="font-weight: bold;">Class Time</span>: TTh, 10:00AM - 11:20AM PT<BR>
+	<span style="font-weight: bold;">Location</span>: Loew Hall 112<BR>
+	<span style="font-weight: bold;">Office hours</span>: Flexible, reach out any time for an appointment<BR>
 
 	<span style="font-weight: bold;">Instructor</span>:
 
 					<a href="https://homes.cs.washington.edu/~axz" target="_blank" rel="noopener">
 						<!-- <img src="img/az2.png" width=150><BR> -->
-						Amy Zhang</a>, axz@cs.uw.edu
+						Amy Zhang</a>, axz@cs.uw.edu<BR>
+
+              <span style="font-weight: bold;">TA</span>:
+
+            					<a href="https://homes.cs.washington.edu/~ruotongw" target="_blank" rel="noopener">
+            						<!-- <img src="img/az2.png" width=150><BR> -->
+            						Ruotong Wang</a>, ruotongw@cs.uw.edu
 
       </div>
 
       <div class="section" id="description" data-href="index.html#description" data-level="0" class="side-nav-header" style="border-top: 0px; padding-top: 1em;">
-      	<!-- <h2>Course Description</h2> -->
+      	<h2>What is social computing?</h2>
 
 
       	<P><b>Social and collaborative computing</b> (social computing for short) is the study of technology-mediated human social interaction, encompassing all social activity from interpersonal relationships, teams, communities, institutions, to society at large. It examines:</P>
@@ -88,9 +94,21 @@
 <li>emergent effects and coevolution from the combination of the two, and </li>
 <li>the design of new technology that mediates human social interaction.</li>
 </ul>
+
+<h2>Why is social computing important?</h2>
+
 <P>Our interactions with other humans today are increasingly becoming mediated through technology, a trend that this pandemic has only exacerbated. Meanwhile, a plethora of computational systems have been introduced in the last several decades that have us interacting with each other in different ways. Sometimes the outcome is good for people and society, leading to serendipitous exchange, collaborative learning, civic engagement, large-scale open and public projects, creative cultural production, and the strengthening of social bonds and support networks. However, we are now more and more attuned to the negative ramifications of these systems, including rampant harassment, polarization and strife, surveillance and loss of rights, trolling and grifting, information overload, misinformation, and the spread of hate.</P>
 <P>As designers and builders of social computing systems, can we imagine a better future? How do we know whether our imagined designs will encourage pro-social outcomes, and how do we guard against harmful negative consequences? How do we know whether a system will be effective or even adopted in the first place?</P>
-<P>In this seminar course, students will gain a broad understanding of the current research landscape in social computing, focusing on a system perspective to examine and imagine system designs to address pressing issues. We will read and discuss papers weekly covering different subareas of social computing, foundational papers in the field, and different methods in social computing. Finally, all students individually or in groups will conduct a research project on building, evaluating, or theorizing about a new social computing design.</P>
+
+<h2>About this class</h2>
+
+<P>In this capstone course, students will work in groups to apply software engineering and system design skills they have learned over their
+  four years in computer science towards building a novel social computing system to address a social challenge.
+  We will follow a human-centered design process for groups to ideate, prototype, test, implement, and showcase their novel system.
+  Along the way, students will gain a broad understanding of the current major pressing issues and
+  state of the art of knowledge in social computing, while taking a critical lens towards social computing systems
+  they use every day. Along with the capstone project, we will have readings, group discussions, reflections, and guest speakers working in social computing.
+</P>
 
 </div>
 
