--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 	<BR><BR>
 <div class="nav-box">
-    <span style="font-weight: bold;">Class Time</span>: TTh, 10:00AM - 11:20AM PT<BR>
+    <span style="font-weight: bold;">Class Time</span>: TTh, 10:00AM - 11:20AM<BR>
 	<span style="font-weight: bold;">Location</span>: Loew Hall 112<BR>
 	<span style="font-weight: bold;">Office hours</span>: Flexible, reach out any time for an appointment<BR>
 
@@ -106,7 +106,7 @@
   four years in computer science towards building a novel social computing system to address a social challenge.
   We will follow a human-centered design process for groups to ideate, prototype, test, implement, and showcase their novel system.
   Along the way, students will gain a broad understanding of the current major pressing issues and
-  state of the art of knowledge in social computing, while taking a critical lens towards social computing systems
+  state of the art of knowledge in social computing, while taking a critical lens toward social computing systems
   they use every day. Along with the capstone project, we will have readings, group discussions, reflections, and guest speakers working in social computing.
 </P>
 
