--- a/site/nav-bar.html
+++ b/site/nav-bar.html
@@ -1,7 +1,7 @@
 <!--
 This is the navbar html which should appear on all pages.
 It should be loaded into every page header using javascript.
-Edit this file with your course title, number, year and quarter, URL, and 
+Edit this file with your course title, number, year and quarter, URL, and
 customize your menu headings.
 For details see: https://getbootstrap.com/docs/3.3/components/#navbar
 -->
@@ -15,7 +15,7 @@ For details see: https://getbootstrap.com/docs/3.3/components/#navbar
         <span class="icon-bar"></span>
       </button>
       <!-- Edit this text and href to display the appropriate course title and link to your website homepage -->
-      <a class="navbar-brand" href="https://social.cs.washington.edu/cse599social/">CSE 599: Social Computing</a>
+      <a class="navbar-brand" href="https://social.cs.washington.edu/cse481social/">CSE 481p: Social Computing Capstone</a>
     </div>
     <div class="collapse navbar-collapse">
         <nav>
