--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -73,15 +73,7 @@
 			    </a></li><li class="nav-item side-nav-1"><a class="nav-link" href="#accommodations">
 			        Accommodations
 			    </a></li>
-			    <li class="nav-item side-nav-0"><a class="nav-link" href="#readings">
-			        Readings
-			    </a></li>
-			    <li class="nav-item side-nav-0"><a class="nav-link" href="#assignments">
-			        Assignments
-			    </a></li>
-			    <li class="nav-item side-nav-0"><a class="nav-link" href="#project">
-			        Project
-			    </a></li><li class="nav-item side-nav-0"><a class="nav-link" href="#grading">
+			    <li class="nav-item side-nav-0"><a class="nav-link" href="#grading">
 			        Grading
 			    </a></li><li class="nav-item side-nav-0"><a class="nav-link" href="#acknowledgements">
 			        Acknowledgements
@@ -176,28 +168,28 @@
     time to work on the project, and there will be group assignments due at regular milestones.
     Groups will be formed during the first week of class.
     Groups will be expected to give updates to the rest of the class throughout the quarter after milestones and gather feedback.
-    Each group will also be expected to have at least one 10 minute check-in per week with Amy or Ruotong.
-    The project will culminate in a Final Showcase in the CSE Atrium where students can demo their projects.
+    Each group will also be expected to have at least one 10 minute check-in per week with Amy or Ruotong sometime during group work time.
+    The project will culminate in a Final Showcase where students can demo their projects to the public.
 	</p>
   <p><b>In-class Lectures, Discussion, and Activities</b>:
-    The other main part of class will involve lectures, class discussion, and activities covering different major social
+    The other main part of class will involve short lectures, class discussion, and activities that cover different major social
     computing topics relevant to current events and our everyday lives.
     We will recap readings that were assigned, discuss students' reflections, and students will
     present their assignments. Active participation by all students will be expected.
     On one or two occasions, we will have a guest speaker come visit the class.
 	</p>
 	<p><b>Reading and Reflections</b>:
-    Each class we will have 1-2 assigned short readings related to the social computing topic of the day.
-    Students are expected to come to class having read the reading. We will be using Hypothes.is as a way for all of us to read together
-    and collectively annotate the reading with our thoughts.
-    Students are expected to leave at least two comments per reading responding to any of the reflection prompts posted on Hypothes.is (or leave another
-    comment of your choice).
+    Each class we will have ~1-2 assigned short readings related to the social computing topic of the day.
+    We will be using Hypothes.is as a way for all of us to read together
+    and collectively annotate the reading before class with our thoughts.
+    Students are expected to leave at least one comment per reading responding to any of the reflection prompts posted on Hypothes.is.
 	</p>
 	<P>
 		<b>Assignments</b>: There are 4 individual assignments during the course for students to
 		do some hands-on exploration, sharing, and deeper reflection on course topics related to social computing.
     These assignments will be presented and discussed
 		during class time.
+
 	</P>
 </div>
 
@@ -251,18 +243,20 @@
 	<div class="section" id="grading"  data-href="index.html#grading" data-level="0" class="side-nav-header">
 	<h2 >Grading</h2>
 
-
-10%: In-class active participation in discussion, feedback, and presentations throughout the quarter<BR>
-10%: Discussion leader (5 points for each time you are a leader)<BR>
-27%: Reading responses and annotations (1.5 points per assignment for 17 reading assignments)<BR>
-10%: Assignments (2.5 points for each assignment)<BR>
-43%: Research project: <BR>
-&nbsp;&nbsp; - 2%: 3 project ideas<BR>
-&nbsp;&nbsp; - 2%: 3 evaluation ideas<BR>
-&nbsp;&nbsp; - 7%: project proposal<BR>
-&nbsp;&nbsp; - 7%: mid-point check-in<BR>
-&nbsp;&nbsp; - 5%: final presentation<BR>
-&nbsp;&nbsp; - 20%: final write-up<BR>
+10%: Attendance and participation in class
+5%: Reading annotations<BR>
+10%: Four individual assignments<BR>
+75%: Research project: <BR>
+&nbsp;&nbsp; - 3%: 3 project proposals<BR>
+&nbsp;&nbsp; - 5%: user research report<BR>
+&nbsp;&nbsp; - 5%: pitch presentation<BR>
+&nbsp;&nbsp; - 10%: low fidelity prototype<BR>
+&nbsp;&nbsp; - 5%: code and design specification<BR>
+&nbsp;&nbsp; - 5%: midterm presentation<BR>
+&nbsp;&nbsp; - 7%: user testing report<BR>
+&nbsp;&nbsp; - 20%: high fidelity prototype<BR>
+&nbsp;&nbsp; - 10%: demo video<BR>
+&nbsp;&nbsp; - 5%: website<BR>
 
 	    </div>
 
