update email and assignment number

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             					<a href="https://homes.cs.washington.edu/~ruotongw" target="_blank" rel="noopener">
             						<!-- <img src="img/az2.png" width=150><BR> -->
-            						Ruotong Wang</a>, ruotongw@cs.uw.edu
+            						Ruotong Wang</a>, ruotongw@cs.washington.edu
 
       </div>
 
