--- a/assignments/index.html
+++ b/assignments/index.html
@@ -9,8 +9,8 @@
     <!-- Edit page title -->
     <title>Assignments - CSE 481p</title>
 
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&amp;family=Roboto+Mono:ital,wght@0,500;1,300&amp;display=swap" rel="stylesheet">
 
     <!-- This script dynamically loads CSS and JS files from the course base directory -->
     <!-- Only edit if you want to change the paths to your JS/CSS sources -->
