--- a/assignments/index.html
+++ b/assignments/index.html
@@ -62,16 +62,16 @@
                   A1: Pitch three project ideas
                 </a></li>
                 <li class="nav-item side-nav-0"><a class="nav-link" href="#A2">
-                  A2: Tell us about an online social community you use
+                  A2: Online community case study
                 </a></li>
                 <li class="nav-item side-nav-0"><a class="nav-link" href="#A3">
-                  A3: No social media reflection
+                  A3: No social media day reflection
                 </a></li>
                 <li class="nav-item side-nav-0"><a class="nav-link" href="#A4">
-                  A4: Critical reflection on a social technology / Write a dystopia
+                  A4: Write a dystopia
                 </a></li>
                 <li class="nav-item side-nav-0"><a class="nav-link" href="#A5">
-                  A5: Tell us about a healthy online community
+                  A5: Healthy online community
                 </a></li>
               </ul>
             </nav>
