update due data and canvas link

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -82,6 +82,7 @@
           <p>The assignment prompt is subject to minor changes, so please check back when time gets closer!</p>
           <div class="section" id="A1" data-href="index.html#A1" data-level="0" class="side-nav-header">
             <h2>A1: Pitch three project ideas</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978850">Canvas link</a><br>Due: Jan 6 at 10am </p>
             <p>Think about your goals for this class and the topics within social computing that interest you to come up with three project ideas. Feel free to take inspiration from your personal life experiences or those of your friends and family regarding problems you’ve encountered or existing tools you use that you’d like to reform. At this point, you don’t need to have any fully fleshed out solutions or anything like that, though you can start to think about solutions if you want to. More importantly, you should focus on concretely describing a couple problem areas or topics that most interest you, and WHY you think they are interesting or important.</p>
             <p>After coming up with three project ideas, create a Google slides presentation to present your three project ideas. Your presentation can have 1-3 slides. <b>Submit the link to the presentation for this assignment. Make sure to set the permissions so that we can edit the file.</b> We will be placing all the slides into one big slideshow, and on Thursday, you will each pitch your project ideas to the class. We will limit you to 1 minute - you can use that time to discuss one idea or all three, up to you - and whatever you don’t get to, classmates will be able to see by browsing the slideshow file.</p>
             <p>Remember that the main purpose of this assignment is to help you find group members that are interested in the same area. Your eventual project can change drastically. So don’t worry if your project idea is still fuzzy. Think about topics that you are excited about and <b>pitch to your classmates</b> to get them excited about it as well!</p>
@@ -90,6 +91,7 @@
 
           <div class="section" id="A2" data-href="index.html#A2" data-level="0" class="side-nav-header">
             <h2>A2: Tell us about an online social community you use</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978871">Canvas link</a><br>Due: Jan 11 at 10am </p>
             <p>Your goal for this assignment is to report on an online community that you are a part of. It can also be a community that you were once a part of but left or is now no longer active. Do not share any personal or private information about community members, and be respectful of community boundaries.</p>
             <ul>
               <li>
@@ -122,6 +124,7 @@
 
           <div class="section" id="A3" data-href="index.html#A3" data-level="0" class="side-nav-header">
             <h2>A3: Pitch three project ideas</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978882">Canvas link</a><br>Due: Jan 18 at 10am </p>
             <p>Your goal is to spend 24 hours without accessing any social media (on your phone, laptop, tablet, etc.). (For the purpose of this challenge, you can not include email and Canvas/other class-related tools if you feel you must access them for school.) To give yourself an extra challenge, try to go without your smartphone entirely along with no social media on any devices, preferably on a day where it is necessary for you to leave your house and go about your daily activities. For an even greater challenge, try spending 24 hours without any devices connected to the internet at all. :) I know it sounds impossible but with a little planning, you may find that you can survive (and maybe even thrive)! Think beforehand if there are any specific accommodations you need to make in order to get through the day.</p>
             <p>During the day, take note of times where your mind wanders and you think of browsing social media or checking your phone. When does this typically happen? What kinds of apps do you find yourself wanting to use? What do you end up doing instead? </p>
             <ul>
@@ -135,6 +138,7 @@
 
           <div class="section" id="A4" data-href="index.html#A4" data-level="0" class="side-nav-header">
             <h2>A4: Pitch three project ideas</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978883">Canvas link</a><br>Due: Jan 22 at 10am </p>
             <p>Brainstorm a near future social computing technology. This can be an existing social computing technology that isn&rsquo;t yet widely adopted or that gets applied to a new area/new people or is wielded by a different power than currently. Or it can be a mashup of two different features/technologies that get combined together. Or it can be a tweak on an existing social computing technology, where the tweak pushes the technology in a more extreme direction. Whatever you come up with, it should be close enough that it seems like a plausible future.</p>
             <p>Now take a critical lens to this technology, thinking about the implications we&rsquo;ve discussed in class about existing social technologies. What are the potential social implications and/or ethical issues and/or regulatory challenges with this technology?</p>
             <p>Taking this thought exercise a step further, turn this critique into a sketch of a story that takes place using this technology. ​What do you think might be a cautionary tale related to this technology? What fictional person in the future would best illustrate this caution? What is their story? Don&rsquo;t write out the whole story but set the stage of this dystopia, like a Black Mirror episode synopsis. What does this dystopia tell us about our current time period and how we think about the design decisions we make today?</p>
@@ -143,6 +147,7 @@
 
           <div class="section" id="A5" data-href="index.html#A5" data-level="0" class="side-nav-header">
             <h2>A5: Pitch three project ideas</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978884">Canvas link</a><br>Due: Mar 1 at 10am </p>
             <p><span>Let&rsquo;s reflect on what we want </span><i><span>more</span></i><span> of from online social systems and what aspect of sociotechnical design can help us get there. Can we learn at all from success stories from current systems or communities out there? Your goal for this assignment is to find an example of a &ldquo;healthy&rdquo; online community or online social space. If you can&rsquo;t think of one (and perhaps most communities are not </span><i><span>uniformly</span></i><span> healthy), you can point to a community that has mixed positive and negative elements and talk about the positive elements. This community can be one that you participate in or one that you discover through searching on the internet.&nbsp;</span></p>
             <ul>
                 <li><span>What criteria do you count in your consideration of what is healthy? </span></li>
