--- a/projects/index.html
+++ b/projects/index.html
@@ -94,6 +94,7 @@
           <p>The assignment prompt is subject to minor changes, so please check back when time gets closer!</p>
           <div class="section" id="G1" data-href="index.html#G1" data-level="0" class="side-nav-header">
             <h2>G1: User Research Report</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978889">Canvas link</a><br>Due: Jan 20 at 10am </p>
             <p><span>This is the user research phase of your project. Based on the project ideas that you&rsquo;ve discussed as a group, narrow down to a target topic area and target audience for your project. For instance, perhaps you wish to do something to combat vaccine misinformation on social media, and thus, you want to target people that inadvertently (as opposed to on purpose) share vaccine misinformation. Or, say you wish to focus on improving online dating during COVID, and you want to target college students on the UW campus. Notice that we&rsquo;re not talking about solutions yet.&nbsp;</span></p>
             <p><span>Given your narrowed focus and audience, plan a series of research activities that will help you know more about your target user(s), their goals and needs, and the environment they are in. These activities can include semi-structured interviews, participant observation, fly on the wall observation, questionnaire, and more.</span></p>
             <p><span>Use the AEIOU framework to help organize your data collection and data analysis. AEIOU means that you will attend to each of these elements during your observations and interviews:</span></p>
@@ -120,6 +121,7 @@
 
           <div class="section" id="G2" data-href="index.html#G2" data-level="0" class="side-nav-header">
             <h2>G2: Pitch Presentation</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978891">Canvas link</a><br>Due: Jan 25 at 10am </p>
             <p><span>Now that your user research is completed, given that you know more about your target audience and topic, you should be able to come up with better and more specific ideas for projects than before. Revisit some of your project ideas in light of your newly acquired knowledge and brainstorm new project ideas. Perhaps at this point, you&rsquo;ve converged as a group on a fuzzy solution or you&rsquo;re still deciding between a few different solution directions, either is fine. However, you should be on your way now to converging on a problem space and developing a compelling story based on your user research as to the importance of your problem space.</span></p>
             <p><span>In light of this project milestone, your assignment is to prepare a 3-5 minute pitch presentation to your classmates. This presentation should introduce your problem space and convince your audience of why this problem space is important, and/or why it is timely to address today. The presentation should also give the audience a deeper understanding of the problem and the people who experience this problem that you are targeting. You can talk through information from your user research as well as any additional information you&rsquo;ve uncovered on the internet. Finally, end with some directions for solutions you are considering. This is a good point to ask any specific feedback questions you may have from your classmates. In class, we will dedicate up to 5 minutes per group to audience questions and feedback.</span></p>
             <p><span>To make your pitch more compelling, consider the following tips:</span></p>
@@ -141,6 +143,7 @@
 
           <div class="section" id="G3" data-href="index.html#G3" data-level="0" class="side-nav-header">
             <h2>G3: Low Fidelity Prototype </h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978892">Canvas link</a><br>Due: Feb 3 at 10am </p>
             <p><span>Produce a low-fidelity prototype that is clear enough to allow you to conduct a &ldquo;wizard of oz&rdquo; experiment with participants. It doesn&rsquo;t have to actually work, but you need to be able to make your participants sufficiently experience it as if it is working. Your goal is to test the experience of using/engaging with your proposed design.</span></p>
             <p><span>You will test your low-fidelity prototype on Tuesday, Feb 1 in class, so you&rsquo;ll need to have the prototype ready by then.&nbsp;</span></p>
             <p><span>After testing, write up a blog post on your low-fidelity prototype and wizard of oz session. It should include 3 parts:</span></p>
@@ -175,6 +178,7 @@
 
           <div class="section" id="G4" data-href="index.html#G4" data-level="0" class="side-nav-header">
             <h2>G4: Code and Design Specification</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978893">Canvas link</a><br>Due: Feb 10 at 10am </p>
             <p><span>The Design and Code Specification report should contain the following components:</span></p>
             <p><span><strong>(1) Requirements document: </strong>Identify the requirements for the project. What will your high-fidelity prototype have to fulfill and be able to do? What user interactions will it have to support? For example:&nbsp;</span></p>
             <ul>
@@ -204,6 +208,7 @@
 
           <div class="section" id="G5" data-href="index.html#G5" data-level="0" class="side-nav-header">
             <h2>G5: Midterm Presentation</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978894">Canvas link</a><br>Due: Feb 15 at 10am </p>
             <p><span>At this point in your project, you have a concrete idea of what you plan to build. You will now give a 3-5 minute presentation of your project to the rest of the class. The goal for this midterm presentation of your project to your classmates is twofold: (1) iterate on improving and fleshing out your pitch of your project (you can now incorporate more of your solution!), building from what you did in G2 to tell a compelling story and looking forward to what you will create for G8&rsquo;s demo video and the final public showcase, and (2) giving an update to your classmates on your project thus far and where you intend to go, including a summary of your code and design specification, and getting class feedback on your proposed direction. This is a good point to ask any specific feedback questions you may have from your classmates. In class, we will dedicate up to 5 minutes per group to audience questions and feedback.</span></p>
             <h3><span>Submission:</span></h3>
             <p><span>Create a slide deck for your presentation in Google Slides in your group&rsquo;s Google Drive folder. </span><strong>Submit the link to the Google Slides presentation on Canvas.</strong><span> You will give this presentation in class on Tues, Feb 15th. All group members should participate in giving the presentation.</span></p>
@@ -218,6 +223,7 @@
 
           <div class="section" id="G6" data-href="index.html#G6" data-level="0" class="side-nav-header">
             <h2>G6: User Testing</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978895">Canvas link</a><br>Due: Feb 24 at 10am </p>
             <p><span>To prepare for user testing, please build a medium-fidelity prototype of your concept. Following the agile software development approach, implement (code) at least 2 functionalities of your system to test. It is up to you to decide what functionalities you implement.</span></p>
             <p><span>Be prepared to have others test your system in class (on Tues, Feb 22) and also arrange for people (can be your friends or family) to test it at other times.&nbsp;</span></p>
             <p><span>What you will test:</span></p>
@@ -261,6 +267,7 @@
 
           <div class="section" id="G7" data-href="index.html#G7" data-level="0" class="side-nav-header">
             <h2>G7: Digital Prototype</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978896">Canvas link</a><br>Due: Mar 3 at 10am </p>
             <p><span>Your final blog post and high-fidelity prototype submission will contain 2 parts.</span></p>
             <p><strong>A-Blog post report:</strong></p>
             <p><span>This is the final summative blog post in your project&rsquo;s blog series. Remind the audience of your problem or need you saw as well as the population/audience you are targeting. Present a description of your final prototype, both from a design and a technical perspective. Discuss any technical issues that came up during your implementation phase and also discuss any pivots you took due to technical issues or findings from testing. Provide your audience with a link for where to access your prototype and encourage them to try it out! Also, provide a link to your Github repository. Please include high-quality screenshots of your prototype. The screenshots should communicate well what the prototype is about for people who have not seen it in action.</span></p>
@@ -281,6 +288,7 @@
 
           <div class="section" id="G8" data-href="index.html#G8" data-level="0" class="side-nav-header">
             <h2>G8: Video Demo</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978897">Canvas link</a><br>Due: Mar 8 at 10am </p>
             <p><span>Building on the two more formal presentations you&rsquo;ve given in class, you will now produce a video demo of your product of no more than 5 minutes. The video demo must include two components:</span></p>
             <p><span><strong>(1) A compelling motivation of the problem and the solution. </strong>Remember our tips from earlier and &ldquo;show not tell&rdquo;. Think about what it is about short videos you&rsquo;ve watched, such as on social media or on TV, that make them compelling. This should be an evolution of what you&rsquo;ve already done for G2 and G5 (can even reuse some of the slides perhaps).</span></p>
             <p><span><strong>(2) A live recorded demonstration of your digital prototype in action.</strong> Depending on your system, this can sometimes be better as a screenshare or a video recording. The demo should go through all the main tasks and scenarios your tool supports. You can use voiceover and text captions, labels, or arrows in the video to help explain what is going on.&nbsp;</span></p>
@@ -300,6 +308,7 @@
 
           <div class="section" id="G9" data-href="index.html#G9" data-level="0" class="side-nav-header">
             <h2>G9: Website</h2>
+            <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978899">Canvas link</a><br>Due: Mar 15 at 10am </p>
             <p><span>The last thing for this project is to put the finishing touches on your project website. If you&rsquo;ve been updating the website over the course of the quarter like we asked, you should have very little to do at this point. This website will serve as the splash page/landing page for your finished product, and something you can point to in your portfolio. Thus, you will want to carefully consider the design of the main page. Think about your favorite software apps and tools and go to their homepage (not logged in) for inspiration on how to design a landing page.</span></p>
             <p><span>The website should include the following information:</span></p>
             <ul>
