--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -114,7 +114,7 @@
 
 			                    <a href="https://homes.cs.washington.edu/~ruotongw" target="_blank" rel="noopener">
 			                      <!-- <img src="img/az2.png" width=150><BR> -->
-			                      Ruotong Wang</a>, ruotongw@cs.uw.edu
+			                      Ruotong Wang</a>, ruotongw@cs.washington.edu
 
 					<BR><BR>
 					<span style="font-weight: bold;">Social technologies we will be using in this class</span>: <BR>
