fix assignment titles

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -123,7 +123,7 @@
           </div>
 
           <div class="section" id="A3" data-href="index.html#A3" data-level="0" class="side-nav-header">
-            <h2>A3: Pitch three project ideas</h2>
+            <h2>A3: No social media day reflection</h2>
             <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978882">Canvas link</a><br>Due: Jan 18 at 10am </p>
             <p>Your goal is to spend 24 hours without accessing any social media (on your phone, laptop, tablet, etc.). (For the purpose of this challenge, you can not include email and Canvas/other class-related tools if you feel you must access them for school.) To give yourself an extra challenge, try to go without your smartphone entirely along with no social media on any devices, preferably on a day where it is necessary for you to leave your house and go about your daily activities. For an even greater challenge, try spending 24 hours without any devices connected to the internet at all. :) I know it sounds impossible but with a little planning, you may find that you can survive (and maybe even thrive)! Think beforehand if there are any specific accommodations you need to make in order to get through the day.</p>
             <p>During the day, take note of times where your mind wanders and you think of browsing social media or checking your phone. When does this typically happen? What kinds of apps do you find yourself wanting to use? What do you end up doing instead? </p>
@@ -137,7 +137,7 @@
           </div>
 
           <div class="section" id="A4" data-href="index.html#A4" data-level="0" class="side-nav-header">
-            <h2>A4: Pitch three project ideas</h2>
+            <h2>A4: Critical reflection on a social technology / Write a dystopia</h2>
             <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978883">Canvas link</a><br>Due: Jan 22 at 10am </p>
             <p>Brainstorm a near future social computing technology. This can be an existing social computing technology that isn&rsquo;t yet widely adopted or that gets applied to a new area/new people or is wielded by a different power than currently. Or it can be a mashup of two different features/technologies that get combined together. Or it can be a tweak on an existing social computing technology, where the tweak pushes the technology in a more extreme direction. Whatever you come up with, it should be close enough that it seems like a plausible future.</p>
             <p>Now take a critical lens to this technology, thinking about the implications we&rsquo;ve discussed in class about existing social technologies. What are the potential social implications and/or ethical issues and/or regulatory challenges with this technology?</p>
@@ -146,7 +146,7 @@
           </div>
 
           <div class="section" id="A5" data-href="index.html#A5" data-level="0" class="side-nav-header">
-            <h2>A5: Pitch three project ideas</h2>
+            <h2>A5: Tell us about a healthy online community </h2>
             <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978884">Canvas link</a><br>Due: Mar 1 at 10am </p>
             <p><span>Let&rsquo;s reflect on what we want </span><i><span>more</span></i><span> of from online social systems and what aspect of sociotechnical design can help us get there. Can we learn at all from success stories from current systems or communities out there? Your goal for this assignment is to find an example of a &ldquo;healthy&rdquo; online community or online social space. If you can&rsquo;t think of one (and perhaps most communities are not </span><i><span>uniformly</span></i><span> healthy), you can point to a community that has mixed positive and negative elements and talk about the positive elements. This community can be one that you participate in or one that you discover through searching on the internet.&nbsp;</span></p>
             <ul>
