--- a/schedule/index.html
+++ b/schedule/index.html
@@ -75,6 +75,7 @@
 				<div class="week">1</div>
 				<div class="date">Tue, Jan 4</div>
 				<div class="topic">Introduction<BR>
+					[<a href="../slides/Day-1.pdf" target="_blank">Slides</a>]
 					</div>
 				<div class="links">
 				</div>
@@ -86,6 +87,7 @@
 				<div class="week"></div>
 				<div class="date">Thur, Jan 6</div>
 				<div class="topic">Landscape of Social Computing Systems<BR>
+					[<a href="../slides/Day-2.pdf" target="_blank">Slides</a>]
 		
 				</div>
 				<div class="links">
@@ -105,6 +107,7 @@
 				<div class="date">Tue, Jan 11</div>
 				<div class="topic">
 					Why do people want to use social computing systems?<BR>
+					[<a href="../slides/Day-3.pdf" target="_blank">Slides</a>]
 				</div>
 				<div class="links">
 				</div>
@@ -120,6 +123,7 @@
 				<div class="date">Thur, Jan 13</div>
 				<div class="topic">
 					What's broken about social computing today?<BR>
+					[<a href="../slides/Day-4.pdf" target="_blank">Slides</a>]
 					</div>
 				<div class="links">
 						<!-- <p>
@@ -182,8 +186,8 @@
 					
 				</div>
 				<div class="links">
-					<P>Cook, Jesselyn, "Selfies, Surgeries And Self-Loathing: Inside The Facetune Epidemic." 2021.
-						[<a href="../readings/W3S2/facetune-selfies-surgeries-body-dysmorphia-JesselynCook.pdf" target="_blank">pdf</a>]
+					<P>Warzel, Charlie, "Could Restorative Justice Fix the Internet?." 2019.
+						[<a href="../readings/W3S2/internet-harassment-restorative-justice.pdf" target="_blank">pdf</a>]
 					</P>
 					<P>Tolentino, Jia, "The Age of Instagram Face." 2019.
 						[<a href="../readings/W3S2/the-age-of-instagram-face-JiaTolentino.pdf" target="_blank">pdf</a>]
