--- a/schedule/index.html
+++ b/schedule/index.html
@@ -106,7 +106,7 @@
 				<div class="week">2</div>
 				<div class="date">Tue, Jan 11</div>
 				<div class="topic">
-					Why do people want to use social computing systems?<BR>
+					Team formation and brainstorm<BR>
 					[<a href="../slides/Day-3.pdf" target="_blank">Slides</a>]
 				</div>
 				<div class="links">
@@ -122,7 +122,7 @@
 				<div class="week"></div>
 				<div class="date">Thur, Jan 13</div>
 				<div class="topic">
-					What's broken about social computing today?<BR>
+					Why do people participate in online social communities?<BR>
 					[<a href="../slides/Day-4.pdf" target="_blank">Slides</a>]
 					</div>
 				<div class="links">
