--- a/schedule/index.html
+++ b/schedule/index.html
@@ -160,7 +160,7 @@
 				<div class="week">3</div>
 				<div class="date">Tue, Jan 18</div>
 				<div class="topic">
-					The Problem with Engagement and Speed<BR>
+					Engagement<BR>
 					[<a href="../slides/Day-5.pdf" target="_blank">Slides</a>]
 				</div>
 				<div class="links">
@@ -200,7 +200,8 @@
 				<div class="week">4</div>
 				<div class="date">Tue, Jan 25</div>
 				<div class="topic">
-						Project pitch presentations<BR>
+						Project pitches<BR>
+						[<a href="../slides/Day-7.pdf" target="_blank">Slides</a>]
 				</div>
 				<div class="links">
 				</div>
@@ -216,7 +217,8 @@
 				<div class="date">Thur, Jan 27</div>
 				<div class="topic">
 					
-					Prototyping and testing social systems<BR>
+					Prototyping Social Computing Systems<BR>
+					[<a href="../slides/Day-8.pdf" target="_blank">Slides</a>]
 					
 				</div>
 				<div class="links">
