--- a/site/nav-bar.html
+++ b/site/nav-bar.html
@@ -36,6 +36,9 @@ For details see: https://getbootstrap.com/docs/3.3/components/#navbar
         <li>
           <a href="projects">Project</a>
         </li>
+         <li>
+          <a href="blogs">Blogs</a>
+        </li>
       </ul>
         </nav>
       <ul class="nav navbar-nav navbar-right hidden-xs hidden-sm">
