update assignment and slides

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -145,7 +145,7 @@
             <p>Take about 2 paragraphs or &lt;200 words to write up this reflection and post it as a Canvas discussion post in the Discussion tab. Then, once you&rsquo;re done, browse through other students&rsquo; posts, and leave at least one comment on another student&rsquo;s post.</p>
           </div>
 
-          <div class="section" id="A5" data-href="index.html#A5" data-level="0" class="side-nav-header">
+         <!--  <div class="section" id="A5" data-href="index.html#A5" data-level="0" class="side-nav-header">
             <h2>A5: Tell us about a healthy online community </h2>
             <p><a href="https://canvas.uw.edu/courses/1519771/assignments/6978884">Canvas link</a><br>Due: Mar 1 at 10am </p>
             <p><span>Let&rsquo;s reflect on what we want </span><i><span>more</span></i><span> of from online social systems and what aspect of sociotechnical design can help us get there. Can we learn at all from success stories from current systems or communities out there? Your goal for this assignment is to find an example of a &ldquo;healthy&rdquo; online community or online social space. If you can&rsquo;t think of one (and perhaps most communities are not </span><i><span>uniformly</span></i><span> healthy), you can point to a community that has mixed positive and negative elements and talk about the positive elements. This community can be one that you participate in or one that you discover through searching on the internet.&nbsp;</span></p>
@@ -158,7 +158,7 @@
             </ul>
             <p><span>Take about 2 paragraphs or &lt;200 words to write up this reflection and post it as a Canvas discussion post in the Discussion tab. Then, once you&rsquo;re done, browse through other students&rsquo; posts, and leave at least one comment on another student&rsquo;s post.&nbsp;</span></p>
 
-          </div>
+          </div> -->
 
 
 
