--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -195,7 +195,7 @@
 			    Students are expected to leave at least one comment per reading responding to any of the reflection prompts posted on Hypothes.is.
 				</p>
 				<P>
-					<b>Assignments</b>: There are 5 individual assignments during the course for students to
+					<b>Assignments</b>: There are <s>5</s> 4 individual assignments during the course for students to
 					do some hands-on exploration, sharing, and deeper reflection on course topics related to social computing.
 			    These assignments will be presented and discussed
 					during class time.
